# agent-workspace

./: .gitignore
.beads/: issues.jsonl
agents/: codebase-cartographer.md  llvm-tester.md
commands/: populate-project-map.md  run-llvm-tests.md  update-marks.md
iree/: review-pr.sh
llvm/: CLAUDE.md  review-pr.sh
scripts/: agent-sandbox  bwrap  my-activity  setup-bwrap-apparmor.sh
skills/add-clang-tidy-check/: SKILL.md
skills/ask-the-peanut-gallery/: SKILL.md  cli.sample.json  codex-agent-task.sh  cursor-agent-multi.py  cursor-agent-multi.sh  cursor-agent-task.sh  (+1 more)
tools/peanut-review/: .gitignore  README.md  pyproject.toml
tools/peanut-review/peanut_review/: __init__.py  __main__.py  agent_control.py  beads.py  cli.py  curator.py  gh.py  gh_pull.py  gh_push.py  launch.py  mcp_server.py  models.py  polling.py  runtime.py  session.py  store.py  supervisor.py  validation.py
tools/peanut-review/peanut_review/personas/: felix.md  irene.md  merlin.md  petra.md  soren.md  vera.md
tools/peanut-review/peanut_review/runners/: claude-agent-task.sh  codex-agent-task.sh  cursor-agent-task.sh  opencode-agent-task.sh
tools/peanut-review/peanut_review/templates/: agent-prompt.md  cli.sample.json  curator-prompt.md
tools/peanut-review/peanut_review/web/: __init__.py  app.py  diff.py  render.py
tools/peanut-review/peanut_review/web/assets/: app.js  index.js  style.css
tools/peanut-review/tests/: test_agent_control.py  test_cli.py  test_gh.py  test_launch.py  test_polling.py  test_session.py  test_store.py  test_supervisor.py  test_validation.py  test_web.py
(+30 files in other folders)
